# factotum

./: pyproject.toml
.github/workflows/: ci.yaml
factotum/config/: settings.py  urls.py
factotum/entrypoints/: asgi.py  manage.py  wsgi.py
