[tool.poetry]
name = "factotum"
version = "0.1.0"
description = "Game event management project"
authors = ["fernroot <arnaldojaws@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
